--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
 
 <body>
     <p id="color">#000000</p>
+    <div style="display:flex;">
+        <h1>Website Under Construction</h1>
+
+        <p>We're working hard to bring you a brand new experience! Our website is currently under construction and will be live in three weeks with a new design.</p>
+    </div>
     <script>
         function randomInt(min, max) {
             return Math.floor(Math.random() * (max - min + 1) + min);
