--- a/index.html
+++ b/index.html
@@ -1,34 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <title>Comming Soon</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="UTF-8" />
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>nestnomads</title>
-    <style>
+    <!-- Font -->
 
-        html,
-        body {
-            height: 100%;
-            margin: 0;
-        }
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans:400,700%7CPoppins:400,500"
+      rel="stylesheet"
+    />
 
-        body {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            cursor: pointer;
-        }
-    </style>
-</head>
+    <link href="common-css/ionicons.css" rel="stylesheet" />
 
-<body>
-    <div style="display:flex;flex-direction: column;align-items: center;">
-        <h1>Website Under Construction</h1>
+    <link href="07-comming-soon/css/styles.css" rel="stylesheet" />
 
-        <p>We're working hard to bring you a brand new experience! Our website is currently under construction and will be live in three weeks with a new design.</p>
+    <link href="07-comming-soon/css/responsive.css" rel="stylesheet" />
+  </head>
+  <body>
+    <div
+      class="main-area center-text"
+      style="background-image: url(images/countdown-6-1600x900.jpg)"
+    >
+      <div class="display-table">
+        <div class="display-table-cell">
+          <h1 class="title"><b>Website Under Construction</b></h1>
+          <p class="desc font-white">
+            We're working hard to bring you a brand new experience! Our website
+            is currently under construction and will be live in three weeks with
+            a new design.
+          </p>
+
+          <ul class="social-btn">
+            <li class="list-heading">Follow us for update</li>
+            <li>
+              <a href="#"><i class="ion-social-facebook"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="ion-social-twitter"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="ion-social-googleplus"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="ion-social-instagram-outline"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="ion-social-pinterest"></i></a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </div>
-</body>
-
+  </body>
 </html>
